test/spec_vectors/local_tee/fail/module_34.wat
(module (func $type-mixed-arg-num-vs-num (param i64 i32) (local f32) (local.tee 1 (f32.const 0))))